--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 body {
     background-color: lightgray;
 }
-
+p {
+    flex: 1;
+    text-align: center;
+}
+input {
+    flex: 5;
+}
+button {
+    flex: 1;
+}
 #sketchBox {
     width: 600px;
     height: 600px;
@@ -12,7 +21,11 @@ body {
     justify-content: space-between;
     flex-direction: column;
 }
-
+#inputRow {
+    width: 600px;
+    display: flex;
+    justify-content: space-between;
+}
 .row{
     flex: 1;
     margin: 0;
@@ -25,15 +38,8 @@ body {
 .square {
     flex: 1;
     padding: 0;
-    margin: 1px;
+    margin: 0px;
+    background-color: white;
 
-}
-.on {
-    background-color: black;
-
-}
-
-.off {
-    background-color: lightgray;
 }
 
